--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
+body {
+  font-family: cursive;
+  text-align: center;
+}
 
+h1 {
+  font-weight: bold;
+  text-shadow: -1px 1px 0 #000,
+    1px 1px 0 #000,
+    1px -1px 0 #000,
+    -1px -1px 0 #000;
+  
+}
+
+#gameBoard {
+  height: 540px;
+  width: 630px;
+  background-color: SkyBlue;
+  border: 10px solid PaleTurquoise;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 55px;
+  justify-content: center;
+  align-items: center;
+}
+
+.cell {
+  height: 70px;
+  width: 70px;
+  margin: 5px;
+  border-radius: 50%;
+  border: 5px solid Tan;
+  background-color: white;
+}
+
+.red-token {
+  background-color: red;
+}
+
+.yellow-token {
+  background-color: yellow;
+}
